# cube-agent3d

./: README.md  pyproject.toml
src/cube_agent3d/: cli.py
src/cube_agent3d/agent/: __init__.py  engine.py  tower_policy.py
src/cube_agent3d/protocol/: types.py
src/cube_agent3d/runtime/: server.py  tick.py
src/cube_agent3d/scene/: __init__.py  state.py
src/cube_agent3d/storage/: __init__.py  logger.py
src/cube_agent3d/web/: app.js  index.html  style.css
